Fix quest icon being squished when the objective pushes to a new line

--- a/client/src/components/pageElements/QuestList/components/Quest/Quest.scss
+++ b/client/src/components/pageElements/QuestList/components/Quest/Quest.scss
@@ -17,7 +17,7 @@ $fontSize: 13px;
   background-repeat: no-repeat;
   background-size: 100% 100%;
 
-  width: 23px;
+  width: 26px;
   height: 22px;
 }
 
@@ -35,6 +35,7 @@ $fontSize: 13px;
 }
 
 .questDetailsText {
+  width: 100%;
   flex-direction: column;
   padding: spacing(extraTight) 0 0 spacing(extraTight);
 }
